--- a/index.html
+++ b/index.html
@@ -1,5 +1,39 @@
 <!DOCTYPE html>
 <html>
-<title>我的第一个页面</title>
-这是内容,你相信吗
+<head>
+  <meta charset="utf-8">
+  <title>JS Bin</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.js"></script>
+  <link rel="stylesheet" href="https://typo.sofi.sh/typo.css">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <style>
+  body{
+    padding: 16px;
+  }
+  img{
+    max-width: 100%;
+  }
+  </style>
+</head>
+<body>
+  <div id="content">
+# 我的第一篇博客
+
+**林佳辉**
+
+__ 爱生活,爱前端__
+
+大家好,我今天学会了Markdown了.
+
+<img src="https://www.zybuluo.com/static/img/logo.png" >
+
+  </div>
+  
+  <script>
+    var content= document.getElementById('content')
+    var markdown = content.innerHTML 
+    var html = marked(markdown)
+    content.innerHTML = html
+  </script>
+</body>
 </html>
